Aug 30 2002  2.5.2  Added fixed-parameter support on bigendian systems.  Normal
                     packet detection/dissection should occur on bigendian now.
                    Minor tweaks to packet noise detection
                    Moved packet rate calculation to server-side
Aug 29 2002  2.5.2  Fixed reassociation subtype
                    Fixed netstumbler detection signature
                    Started fixing support for bigendian systems.  Initial
                     packet type dissection and network detection should
                     work.
                    Added netstumbler 3.30 detection (     Intentionally blank)
                    Suppressed error catching for GPS to accomadate new gpsd
                     and garmin interaction leading to rapid loss/regain of gps
Aug 28 2002  2.5.2  Merged diff from jwright to the ARM docs to alleviate some
                     questions and problems.
                    More speed improvements to panelfront
Aug 27 2002  2.5.2  Resampled alert.wav to be much smaller.
                    Merged patch from poptix to use mappoint since MapBlast
                     encodes their URL's now.  gpsmap works again.
Aug 25 2002  2.5.2  Optomizations to panelfront
                    Rudimentary deauthentication flood detection
                    kismet_curses exit code used to determine if a kill of 
                     kismet_server is necessary (eliminates bash errors on some
                     conditions).
Aug 24 2002  2.5.2  Fixed major problems introduced with yesterdays speed boost
                    Fixed gpsmap from yesterdays changes
Aug 23 2002  2.5.2  Doubled (or more) the speed of packet tracking via 
                     suggestions from Million
                    Incorporated speed boosts into tcpclient and frontend
Aug 22 2002  2.5.2  Added Netstumbler 2.32 detection
                    Improved netstumbler dissection and boosted packet
                     processing speed slightly